force-app/main/default/objects/Contract/fields/Total_ex_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_ex_VAT__c</fullName>
    <inlineHelpText>Total amount on exchange exclusive of  VAT</inlineHelpText>
    <label>Total ex VAT</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>