force-app/main/default/objects/Contract/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>Initial_Marketing_Fee__c  +  Legal_Costs__c  +  LFDA_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of the fit out, initial marketing and legal fees</inlineHelpText>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>