force-app/main/default/objects/Contract/fields/Total_inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_inc_VAT__c</fullName>
    <formula>Total_ex_VAT__c +  VAT_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount payable on exchange inclusive of VAT at the prevailing rate</inlineHelpText>
    <label>Total inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>