force-app/main/default/objects/Contract/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <formula>Opportunity__r.Total_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of Sales, Income &amp; Position Yields</inlineHelpText>
    <label>Total Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>