force-app/main/default/objects/Contract/fields/Tourism_Rating__c.field-meta.xml
<CustomField>
    <fullName>Tourism_Rating__c</fullName>
    <formula>Opportunity__r.Tourism_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Tourism rating pulled from the corresponding opportunity</inlineHelpText>
    <label>Tourism Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>