force-app/main/default/objects/Contract/fields/Trading_Hours__c.field-meta.xml
<CustomField>
    <fullName>Trading_Hours__c</fullName>
    <inlineHelpText>Enter the normal trading hours the tenant has signed up to</inlineHelpText>
    <label>Trading Hours</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>