force-app/main/default/objects/Contract/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <inlineHelpText>Enter the name uder which the brand wishes to trade for this lease</inlineHelpText>
    <label>Trading Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>