force-app/main/default/objects/Contract/fields/Turnover_Rent__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Rent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the percentage of turnover payable for this lease</inlineHelpText>
    <label>Turnover Rent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>