force-app/main/default/objects/Contract/fields/Turnover_Rent_Clause__c.field-meta.xml
<CustomField>
    <fullName>Turnover_Rent_Clause__c</fullName>
    <inlineHelpText>Describe (in 1k characters) the Turnover Rent scenario for this deal</inlineHelpText>
    <label>Turnover Rent Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>