force-app/main/default/objects/Contract/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>Opportunity__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit on the Opportunity</inlineHelpText>
    <label>Unit</label>
    <type>Text</type>
</CustomField>