force-app/main/default/objects/Contract/fields/Unit_Alterations__c.field-meta.xml
<CustomField>
    <fullName>Unit_Alterations__c</fullName>
    <defaultValue>&quot;No alterations to the unit specified&quot;</defaultValue>
    <inlineHelpText>Summarise any planned alterations to the Unit</inlineHelpText>
    <label>Unit Alterations</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>