force-app/main/default/objects/Contract/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <formula>MID( Opportunity__r.Unit__r.Unit_ID__c, 3, 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit ID with the Village code stripped off</inlineHelpText>
    <label>Unit Code</label>
    <type>Text</type>
</CustomField>