force-app/main/default/objects/Contract/fields/Unit_GIA__c.field-meta.xml
<CustomField>
    <fullName>Unit_GIA__c</fullName>
    <formula>Opportunity__r.Unit__r.Size_GIA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit GIA in sq.m</inlineHelpText>
    <label>Unit_GIA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>