force-app/main/default/objects/Contract/fields/Unit_GIA_sqft__c.field-meta.xml
<CustomField>
    <fullName>Unit_GIA_sqft__c</fullName>
    <formula>Opportunity__r.Unit__r.GIA_sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit GIA in square feet</inlineHelpText>
    <label>Unit GIA sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>