force-app/main/default/objects/Contract/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <formula>Opportunity__r.Unit__r.Unit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unique unit id pulled from the Unit object</inlineHelpText>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>