force-app/main/default/objects/Contract/fields/Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size__c</fullName>
    <formula>IF( Opportunity__r.Unit__r.Size_GEA__c  &gt; 0, Opportunity__r.Unit__r.Size_GEA__c, Notional_Size__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unit size in square metres pulled from the Unit object if a unit has been allocated otherwise the Ideal size is used if no unit has been allocated</inlineHelpText>
    <label>Unit Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>