force-app/main/default/objects/Contract/fields/Unit_Size_sq_ft_zero__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size_sq_ft_zero__c</fullName>
    <formula>Opportunity__r.Unit__r.GEA_sq_ft_zero__c * 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Size in square feet with the decimal places suppressed</inlineHelpText>
    <label>Unit_Size_sq.ft zero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>