force-app/main/default/objects/Contract/fields/Unit_Size_sqft__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size_sqft__c</fullName>
    <formula>Opportunity__r.Unit__r.Size_sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit GEA in sq.ft</inlineHelpText>
    <label>Unit Size sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>