force-app/main/default/objects/Contract/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <formula>TEXT( Opportunity__r.Unit__r.Unit_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If a Unit has been assigned to this contract the availability status of the unit is retrieved from the Unit record itself</inlineHelpText>
    <label>Unit Status</label>
    <type>Text</type>
</CustomField>