force-app/main/default/objects/Contract/fields/VAT_amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_amount__c</fullName>
    <formula>Total_ex_VAT__c  *  Village__r.Std_VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>VAT payable at the prevailing rate specified for the village</inlineHelpText>
    <label>VAT amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>