force-app/main/default/objects/Contract/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the village for this lease</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>