force-app/main/default/objects/Contract/fields/Village_CEO__c.field-meta.xml
<CustomField>
    <fullName>Village_CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>CEO for the Village</inlineHelpText>
    <label>Village CEO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>