force-app/main/default/objects/Contract/fields/Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Village_Code__c</fullName>
    <formula>Village__r.Village_Code__c</formula>
    <inlineHelpText>The 2 digit village code pulled from the Village object, this is used to select the appropriate contract approval process</inlineHelpText>
    <label>Village Code</label>
    <type>Text</type>
</CustomField>