force-app/main/default/objects/Contract/fields/VR_Contact__c.field-meta.xml
<CustomField>
    <fullName>VR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the primary VR Contact for this deal</inlineHelpText>
    <label>VR Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>