force-app/main/default/objects/Contract/fields/VR_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>VR_Contract_Number__c</fullName>
    <formula>IF( LEN(ContractNumber) = 8, Village_Code__c &amp; &quot;/&quot; &amp; RIGHT( ContractNumber , 5), Village_Code__c &amp; &quot;/&quot; &amp; RIGHT( ContractNumber , 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto generated contract number pre-fixed by the 2 digit Village Code</inlineHelpText>
    <label>VR Contract Number</label>
    <type>Text</type>
</CustomField>