force-app/main/default/objects/Contract/fields/Ye0__c.field-meta.xml
<CustomField>
    <fullName>Ye0__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH( First_Financial_Year_End__c) ,DAY( First_Financial_Year_End__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ye0</label>
    <type>Date</type>
</CustomField>