force-app/main/default/objects/Contract/fields/Ye1__c.field-meta.xml
<CustomField>
    <fullName>Ye1__c</fullName>
    <formula>DATE(YEAR(TODAY()) + 1,MONTH( First_Financial_Year_End__c) ,DAY( First_Financial_Year_End__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ye1</label>
    <type>Date</type>
</CustomField>