force-app/main/default/objects/Contract/fields/Year_1_10_Total_TOR__c.field-meta.xml
<CustomField>
    <fullName>Year_1_10_Total_TOR__c</fullName>
    <inlineHelpText>The accumulated turnover rent for years 1 - 10</inlineHelpText>
    <label>Year 1 - 10 Total TOR</label>
    <summarizedField>Term_Increments__c.ToR_Percentage__c</summarizedField>
    <summaryFilterItems>
        <field>Term_Increments__c.Year__c</field>
        <operation>lessOrEqual</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>Term_Increments__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>