force-app/main/default/objects/Contract/fields/Year_1_5_Increment_Count__c.field-meta.xml
<CustomField>
    <fullName>Year_1_5_Increment_Count__c</fullName>
    <inlineHelpText>The number of increments in Years 1-5</inlineHelpText>
    <label>Year 1-5 Increment Count</label>
    <summaryFilterItems>
        <field>Term_Increments__c.Year__c</field>
        <operation>lessOrEqual</operation>
        <value>5</value>
    </summaryFilterItems>
    <summaryForeignKey>Term_Increments__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>