force-app/main/default/objects/Contract/fields/Year_1_Blended_TOR__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Blended_TOR__c</fullName>
    <formula>Year_1_Total_TOR__c  /  Year_1_Increment_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year 1 Blended Turnover Rent</inlineHelpText>
    <label>Year 1 Blended TOR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>