force-app/main/default/objects/Contract/fields/Year_1_Increment_Count__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Increment_Count__c</fullName>
    <inlineHelpText>The count of incements in Year 1</inlineHelpText>
    <label>Year 1 Increment Count</label>
    <summaryFilterItems>
        <field>Term_Increments__c.Year__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Term_Increments__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>