force-app/main/default/objects/Contract/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the expected yield for the 1st year of trading</inlineHelpText>
    <label>Yield</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>