force-app/main/default/objects/Contract/recordTypes/Tenancy_Contract.recordType-meta.xml
<RecordType>
    <fullName>Tenancy_Contract</fullName>
    <active>true</active>
    <description>Village Tenancy Contract</description>
    <label>Tenancy Contract</label>
</RecordType>