force-app/main/default/objects/Contract/validationRules/Validate_Distance_Metric.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Distance_Metric</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Distance_Metric__c  &lt;&gt; &quot;Miles&quot;, Distance_Metric__c  &lt;&gt; &quot;Kilometres&quot;, Distance_Metric__c  &lt;&gt; &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Distance_Metric__c</errorDisplayField>
    <errorMessage>Only use Miles or Kilometres</errorMessage>
</ValidationRule>