force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>Village_Code__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Offer_Status__c</columns>
    <columns>Unit_Name__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>MRI_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>